--- a/user-dev.yml
+++ b/user-dev.yml
@@ -3,6 +3,13 @@ server:
 spring:   # 服务名称，暂时没有用，讲到SpringCloud服务调用的时候才会有用。
   application:
     name: microservice-user
+  zipkin:
+    base-url: http://127.0.0.1:9041
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/springcloud?characterEncoding=UTF8&serverTimezone=UTC
     driver-class-name: com.mysql.jdbc.Driver
